--- a/system-platform-pom/pom.xml
+++ b/system-platform-pom/pom.xml
@@ -20,6 +20,11 @@
     <module>../system-platform-common</module>
     <module>../system-platform-admin</module>
     <module>../system-platform-backup</module>
+<!--    consul-->
+    <module>../system-platform-consul-monitor</module>
+    <module>../system-platform-consul-producer-one</module>
+    <module>../system-platform-consul-producer-two</module>
+    <!--    nacos-->
     <module>../system-platform-monitor</module>
     <module>../system-platform-nacos-consumer</module>
     <module>../system-platform-nacos-producer-one</module>
