--- a/system-platform-consul-monitor/src/main/resources/application.yml
+++ b/system-platform-consul-monitor/src/main/resources/application.yml
@@ -26,3 +26,7 @@ spring:
         admin:
             discovery:
                 ignored-services: consul
+    security:
+        user:
+            name: admin
+            password: admin
