--- a/system-platform-consul-producer-one/pom.xml
+++ b/system-platform-consul-producer-one/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>kuroneko.fun</groupId>
     <artifactId>system-platform-consul-producer-one</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0</version>
     <name>system-platform-consul-producer-one</name>
     <description>生产者 consul-producer-one</description>
 
@@ -15,6 +15,7 @@
         <spring-boot-admin.version>2.3.1</spring-boot-admin.version>
         <spring-boot.version>2.3.7.RELEASE</spring-boot.version>
         <spring-cloud.version>Hoxton.SR9</spring-cloud.version>
+        <docker.image.prefix>system-platform-consul-producer-one</docker.image.prefix>
     </properties>
 
     <dependencies>
@@ -120,6 +121,24 @@
                     </execution>
                 </executions>
             </plugin>
+            <!-- Docker maven plugin -->
+            <plugin>
+                <groupId>com.spotify</groupId>
+                <artifactId>docker-maven-plugin</artifactId>
+                <version>1.0.0</version>
+                <configuration>
+                    <imageName>${docker.image.prefix}/${project.artifactId}</imageName>
+                    <dockerDirectory>src/main/docker</dockerDirectory>
+                    <resources>
+                        <resource>
+                            <targetPath>/</targetPath>
+                            <directory>${project.build.directory}</directory>
+                            <include>${project.build.finalName}.jar</include>
+                        </resource>
+                    </resources>
+                </configuration>
+            </plugin>
+            <!-- Docker maven plugin -->
         </plugins>
     </build>
 
