--- a/system-platform-consul-producer-one/src/main/resources/application.yml
+++ b/system-platform-consul-producer-one/src/main/resources/application.yml
@@ -22,10 +22,10 @@ spring:
             port: 8500
             discovery:
                 service-name: ${spring.application.name}
-    boot:
-        admin:
-            client:
-                url: "http://localhost:8083"
+#    boot:
+#        admin:
+#            client:
+#                url: "http://localhost:8083"
 feign:
     hystrix:
         enabled: true
