--- a/system-platform-conusl-consumer/src/main/resources/application.yml
+++ b/system-platform-conusl-consumer/src/main/resources/application.yml
@@ -23,6 +23,21 @@ spring:
             port: 8500
             discovery:
                 service-name: ${spring.application.name}
+    zipkin:
+        base-url: http://117.24.14.69:9411/
+        sender:
+            type: rabbit
+        rabbitmq:
+            addresses: 117.24.14.69:5672
+    sleuth:
+      sampler:
+          probability: 1
+    rabbitmq:
+        port: 5672
+        username: guest
+        password: guest
+        addresses: 117.24.14.69
+
 #    boot:
 #        admin:
 #            client:
