--- a/system-platform-zuul/src/main/resources/application.yml
+++ b/system-platform-zuul/src/main/resources/application.yml
@@ -22,6 +22,21 @@ spring:
       port: 8500
       discovery:
         service-name: ${spring.application.name}
+  zipkin:
+    base-url: http://117.24.14.69:9411/
+    sender:
+      type: rabbit
+    rabbitmq:
+      addresses: 117.24.14.69:5672
+  sleuth:
+    sampler:
+      probability: 1
+  rabbitmq:
+    host: 117.24.14.69
+    port: 5672
+    username: guest
+    password: guest
+
 #    boot:
 #        admin:
 #            client:
