--- a/system-platform-pom/pom.xml
+++ b/system-platform-pom/pom.xml
@@ -20,6 +20,7 @@
     <module>../system-platform-common</module>
     <module>../system-platform-admin</module>
     <module>../system-platform-backup</module>
+    <module>../system-platform-bus-config</module>
 <!--    consul-->
     <module>../system-platform-consul-monitor</module>
     <module>../system-platform-conusl-consumer</module>
