--- a/system-platform-admin/src/main/resources/application.yml
+++ b/system-platform-admin/src/main/resources/application.yml
@@ -12,11 +12,11 @@ spring:
   #      discovery:
   #        serviceName: ${spring.application.name}    # 注册到consul的服务名称
   zipkin:
-    base-url: http://117.24.14.69:9411/
+    base-url: http://*.*.*.*:9411/
     sender:
       type: rabbit
     rabbitmq:
-      addresses: 117.24.14.69:5672
+      addresses: *.*.*.*:5672
   sleuth:
     sampler:
       probability: 1
@@ -24,7 +24,7 @@ spring:
     port: 5672
     username: guest
     password: guest
-    addresses: 117.24.14.69
+    addresses: *.*.*.*
   datasource:
     name: druidDataSource
     type: com.alibaba.druid.pool.DruidDataSource
