--- a/system-platform-bus-config/src/main/resources/application.yml
+++ b/system-platform-bus-config/src/main/resources/application.yml
@@ -27,16 +27,16 @@ spring:
           uri: https://gitee.com/BigKuroneko/config-repo.git  # 配置git仓库的地址
           search-paths: config-repo  # git仓库地址下的相对地址，可以配置多个，用,分割。
   zipkin:
-    base-url: http://117.24.14.69:9411/
+    base-url: http://*.*.*.*:9411/
     sender:
       type: rabbit
     rabbitmq:
-      addresses: 117.24.14.69:5672
+      addresses: *.*.*.*:5672
   sleuth:
     sampler:
       probability: 1
   rabbitmq:
-    host: 117.24.14.69
+    host: *.*.*.*
     port: 5672
     username: guest
     password: guest
