--- a/system-platform-consul-producer-two/src/main/resources/application.yml
+++ b/system-platform-consul-producer-two/src/main/resources/application.yml
@@ -24,11 +24,11 @@ spring:
             discovery:
                 service-name: ${spring.application.name}
     zipkin:
-        base-url: http://117.24.14.69:9411/
+        base-url: http://*.*.*.*:9411/
         sender:
             type: rabbit
         rabbitmq:
-            addresses: 117.24.14.69:5672
+            addresses: *.*.*.*:5672
     sleuth:
         sampler:
             probability: 1
@@ -36,7 +36,7 @@ spring:
         port: 5672
         username: guest
         password: guest
-        addresses: 117.24.14.69
+        addresses: *.*.*.*
 
 feign:
     hystrix:
