--- a/system-platform-zuul/src/main/resources/application.yml
+++ b/system-platform-zuul/src/main/resources/application.yml
@@ -23,16 +23,16 @@ spring:
       discovery:
         service-name: ${spring.application.name}
   zipkin:
-    base-url: http://117.24.14.69:9411/
+    base-url: http://*.*.*.*:9411/
     sender:
       type: rabbit
     rabbitmq:
-      addresses: 117.24.14.69:5672
+      addresses: *.*.*.*:5672
   sleuth:
     sampler:
       probability: 1
   rabbitmq:
-    host: 117.24.14.69
+    host: *.*.*.*
     port: 5672
     username: guest
     password: guest
